tests/fixtures/errors/exp_requires_dimensionless.ksr
// error: exp() requires Dimensionless argument
param alt: Length = 400 km;
node bad: Dimensionless = exp(@alt);
